--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # Prefix diddling
-unbind-key C-b			# remove the old send-prefix key
-set-option -g prefix `
-bind-key ` last-window
+# unbind-key C-b			# remove the old send-prefix key
+# set-option -g prefix \
+# bind-key \ send-prefix
 
 # keys
 unbind %
