--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,7 @@ bind-key Enter break-pane
 
 # Look and feel
 set-option -g base-index 1	# 0 is too far from the prefix
+set-window-option -g pane-base-index 1
 set-option -g status-bg blue
 set-option -g status-fg white
 set-option -g message-bg red
