--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # Prefix diddling
 # unbind-key C-b			# remove the old send-prefix key
-# set-option -g prefix \
+set-option -g prefix C-f
 # bind-key \ send-prefix
 
 # keys
@@ -36,4 +36,4 @@ set-option -g status-left '#[fg=blue]#[bg=white] #H:#S.#I.#P #[default]'
 set-option -g status-right '%F %H%Mhrs'
 set-window-option -g mode-mouse on
 
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+# set-option -g default-command "reattach-to-user-namespace -l zsh"
