--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 unbind-key C-b
-set -g prefix 'C-\'
-bind-key 'C-\' send-prefix
+set -g prefix 'C-a'
+bind-key 'C-a' send-prefix
 
 set -s escape-time 0
 # 0 is too far from ` ;)
@@ -15,23 +15,25 @@ set -g status-keys vi
 set -g history-limit 10000
 
 setw -g mode-keys vi
-setw -g mode-mouse on
 setw -g monitor-activity on
 
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+
+# Pane splitting keys
 bind-key | split-window -h
 bind-key - split-window -v
+unbind '"'
+unbind %
 
-# bind-key J resize-pane -D 5
-# bind-key K resize-pane -U 5
-# bind-key H resize-pane -L 5
-# bind-key L resize-pane -R 5
+# Shift+Vim keys for resizing
+bind-key -n S-j resize-pane -D 5
+bind-key -n S-k resize-pane -U 5
+bind-key -n S-h resize-pane -L 5
+bind-key -n S-l resize-pane -R 5
 
-# bind-key M-j resize-pane -D
-# bind-key M-k resize-pane -U
-# bind-key M-h resize-pane -L
-# bind-key M-l resize-pane -R
-
-# Vim style pane selection
+# Prefixed Vim keys pane selection
 bind h select-pane -L
 bind j select-pane -D 
 bind k select-pane -U
@@ -53,6 +55,17 @@ bind -n M-Down select-pane -D
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# switch windows alt+number
+bind-key -n M-1 select-window -t 1
+bind-key -n M-2 select-window -t 2
+bind-key -n M-3 select-window -t 3
+bind-key -n M-4 select-window -t 4
+bind-key -n M-5 select-window -t 5
+bind-key -n M-6 select-window -t 6
+bind-key -n M-7 select-window -t 7
+bind-key -n M-8 select-window -t 8
+bind-key -n M-9 select-window -t 9
+
 # No delay for escape key press
 set -sg escape-time 0
 
@@ -60,13 +73,32 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 # THEME
-# set -g status-bg black
-# set -g status-fg white
-# set -g window-status-current-bg white
-# set -g window-status-current-fg black
-# set -g window-status-current-attr bold
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=green](#S) #(whoami)'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+#set -g status-interval 60
+#set -g status-left-length 30
+#set -g status-left '#[fg=green](#S) #(whoami)'
+#set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
+# Design
+
+set-window-option -g status-left " #S "
+set-window-option -g status-left-fg black
+set-window-option -g status-left-bg white
+
+set-window-option -g status-right " %H:%M %d-%b-%y "
+set-window-option -g status-right-fg black
+set-window-option -g status-right-bg white
+
+set-window-option -g window-status-format " #I: #W "
+set-window-option -g window-status-current-format " #I: #W "
+set-window-option -g window-status-current-fg green
+set-window-option -g window-status-current-bg black
+
+# Set inactive/active window styles
+set -g window-style 'fg=colour247,bg=colour233'
+set -g window-active-style 'fg=colour250,bg=black'
+
+# Pane border colors 
+#set -g pane-border-fg colour250
+#set -g pane-border-bg colour236
+#set -g pane-active-border-fg colour250 
+#set -g pane-active-border-bg colour250
