--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,8 @@ set -g base-index 1
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-set -g default-terminal screen-256color
+set -g default-terminal xterm-256color
+set -g xterm-keys on
 set -g status-keys vi
 set -g history-limit 10000
 
