--- a/tmux.conf
+++ b/tmux.conf
@@ -29,10 +29,10 @@ unbind '"'
 unbind %
 
 # Shift+Vim keys for resizing
-bind-key -n S-j resize-pane -D 5
-bind-key -n S-k resize-pane -U 5
-bind-key -n S-h resize-pane -L 5
-bind-key -n S-l resize-pane -R 5
+# bind J resize-pane -D 5
+# bind K resize-pane -U 5
+# bind H resize-pane -L 5
+# bind L resize-pane -R 5
 
 # Prefixed Vim keys pane selection
 bind h select-pane -L
