--- a/tmux.conf
+++ b/tmux.conf
@@ -3,14 +3,14 @@ set -g prefix 'C-a'
 bind-key 'C-a' send-prefix
 
 set -s escape-time 0
-# 0 is too far from ` ;)
+# 0 is too far away
 set -g base-index 1
 
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-set -g default-terminal xterm-256color
+set -g default-terminal "xterm-256color"
 set -g xterm-keys on
 set -g status-keys vi
 set -g history-limit 10000
